tests/error/new_prim.gw
#! [contains] can't use 'new' on non-object types...
new int;
